deploy/retrieveUnpackaged/objects/Rackstar__c.object
<CustomObject>
    <description>data loaded to show Rackstar qualification data</description>
    <fields>
        <fullName>Attainment_Needed__c</fullName>
        <inlineHelpText>Attainment needed for Half.</inlineHelpText>
        <label>Attainment Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attainment_Percent__c</fullName>
        <inlineHelpText>Attainment % for half.</inlineHelpText>
        <label>Attainment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attainment__c</fullName>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Required__c</fullName>
        <label>Percent Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Team__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rackstars</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rackstar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Attainment__c</columns>
        <columns>Attainment_Percent__c</columns>
        <columns>Attainment_Needed__c</columns>
        <columns>Percent_Required__c</columns>
        <columns>Quota__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rackstar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rackstars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>